# seARCH

./: .gitignore  MANIFEST.in  README.md  docker-compose.yml  dockerfileに記述する内容.md  strat_seARCH.sh  仕様書_私の建築訪問記.md  開発メモ.md
Ansible/: maj_playbook.yml  maj_sever_hosts
Docker/: docker-compose.yml
Docker/mysql/: Dockerfile  my.cnf
Docker/mysql/initdb.d/: 1_init.sql  2_archtect_insert.sql  3_archtecture_insert.sql  archtect_insert.sql  archtecture_insert.sql  init.sql
Docker/mysql/sh/: insert.sh
Docker/mysql/sql/: archtecture_insert.sql
maj/: Dockerfile  pyproject.toml  requirements.txt  setup.py
maj/maj/: Dockerfile
maj/maj/maj_app/: search.py
maj/maj/maj_app/static/: style.css
maj/maj/maj_app/static/js/: leaflet_tuto.js
maj/majapp/: __init__.py  db.py  detail.py  favorite.py  favorite_del.py  login.py  register.py  search.py  user_register.py
maj/majapp/static/: style.css
maj/majapp/static/js/: leaflet_tuto.js
maj/majapp/templates/: base.html  detail.html  favorite.html  login.html  register.html  search.html  user_register.html
maj/tests/: .coverage  test_maj.py  test_search.py
python/: __init__.py  search.py
python/maj_app/templates/: base.html
python/templates/: base.html  search.html
