[tool.poetry]
name = "maj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
requests = "^2.28.0"
PyMySQL = "^1.0.2"
mysql-connector = "^2.2.9"
coverage = "^6.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
